subprojects/PCL/include/pcl/pcl_executor.h


pcl_executor_t* pcl_executor_create(void);
void pcl_executor_destroy(pcl_executor_t* e);
pcl_status_t pcl_executor_add(pcl_executor_t* e, pcl_container_t* c);
pcl_status_t pcl_executor_spin(pcl_executor_t* e);
pcl_status_t pcl_executor_spin_once(pcl_executor_t* e, uint32_t timeout_ms);
void pcl_executor_request_shutdown(pcl_executor_t* e);
pcl_status_t pcl_executor_shutdown_graceful(pcl_executor_t* e,
                                            uint32_t        timeout_ms);
pcl_status_t pcl_executor_post_incoming(pcl_executor_t*  e,
                                        const char*      topic,
                                        const pcl_msg_t* msg);
pcl_status_t pcl_executor_invoke_service(pcl_executor_t*  e,
                                         const char*      service_name,
                                         const pcl_msg_t* request,
                                         pcl_msg_t*       response);
pcl_status_t pcl_executor_publish(pcl_executor_t*  e,
                                  const char*      topic,
                                  const pcl_msg_t* msg);