subprojects/PCL/include/pcl/pcl_container.h


typedef void (*pcl_sub_callback_t)(pcl_container_t* c,
                                   const pcl_msg_t*  msg,
                                   void*             user_data);
typedef pcl_status_t (*pcl_service_handler_t)(pcl_container_t*    c,
                                              const pcl_msg_t*    request,
                                              pcl_msg_t*          response,
                                              pcl_svc_context_t*  ctx,
                                              void*               user_data);
typedef struct {
  pcl_status_t (*on_configure)  (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_activate)   (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_deactivate) (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_cleanup)    (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_shutdown)   (pcl_container_t* self, void* user_data);
  pcl_status_t (*on_tick)(pcl_container_t* self, double dt_seconds,
                          void* user_data);
} pcl_callbacks_t;
pcl_container_t* pcl_container_create(const char*            name,
                                      const pcl_callbacks_t* callbacks,
                                      void*                  user_data);
void pcl_container_destroy(pcl_container_t* c);
pcl_status_t pcl_container_configure(pcl_container_t* c);
pcl_status_t pcl_container_activate(pcl_container_t* c);
pcl_status_t pcl_container_set_tick_rate_hz(pcl_container_t* c, double hz);
pcl_port_t* pcl_container_add_subscriber(pcl_container_t* c,
                                         const char*         topic,
                                         const char*         type_name,
                                         pcl_sub_callback_t  cb,
                                         void*               user_data);
pcl_port_t* pcl_container_add_service(pcl_container_t*      c,
                                      const char*           service_name,
                                      const char*           type_name,
                                      pcl_service_handler_t handler,
                                      void*                 user_data);
pcl_status_t pcl_service_respond(pcl_svc_context_t* ctx,
                                 const pcl_msg_t*   response);
void pcl_service_context_free(pcl_svc_context_t* ctx);