subprojects/PCL/include/pcl/pcl_transport.h


typedef struct {
  pcl_status_t (*publish)(void*            adapter_ctx,
                          const char*      topic,
                          const pcl_msg_t* msg);
  pcl_status_t (*serve)(void*            adapter_ctx,
                        const char*      service_name,
                        const pcl_msg_t* request,
                        pcl_msg_t*       response);
  pcl_status_t (*subscribe)(void*       adapter_ctx,
                            const char* topic,
                            const char* type_name);
  pcl_status_t (*invoke_async)(void*            adapter_ctx,
                               const char*      service_name,
                               const pcl_msg_t* request,
                               pcl_resp_cb_fn_t callback,
                               void*            user_data);
  pcl_status_t (*respond)(void*              adapter_ctx,
                          pcl_svc_context_t* svc_ctx,
                          const pcl_msg_t*   response);
  void (*shutdown)(void* adapter_ctx);
  pcl_status_t (*invoke_stream)(void*               adapter_ctx,
                                const char*         service_name,
                                const pcl_msg_t*    request,
                                pcl_stream_msg_fn_t callback,
                                void*               user_data,
                                void**              stream_handle);
  pcl_status_t (*stream_send)(void*            adapter_ctx,
                              void*            stream_handle,
                              const pcl_msg_t* msg);
  pcl_status_t (*stream_end)(void*        adapter_ctx,
                             void*        stream_handle,
                             pcl_status_t status);
  pcl_status_t (*stream_cancel)(void* adapter_ctx,
                                void* stream_handle);
  void* adapter_ctx;
} pcl_transport_t;
pcl_status_t pcl_executor_set_transport(pcl_executor_t*        e,
                                        const pcl_transport_t* transport);
pcl_status_t pcl_executor_dispatch_incoming(pcl_executor_t*  e,
                                            const char*      topic,
                                            const pcl_msg_t* msg);
pcl_status_t pcl_executor_invoke_async(pcl_executor_t*  e,
                                       const char*      service_name,
                                       const pcl_msg_t* request,
                                       pcl_resp_cb_fn_t callback,
                                       void*            user_data);